# json-generator

./: .eslintrc.json  .gitignore  README.md  functions.js  index.html  index.js  main.cjs  main.js  package-lock.json  package.json  test.txt  values.json
Generator files/: advancement.json  loot_table.json
assets/: styles.css
functions/: advancements.js  base.js  block_models.js  fixers.js  (+11 more)
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/app-src/: index.html  index.js
src-tauri/app-src/assets/: Dirt.xcf
src-tauri/app-src/assets/Loading Gif/: Load Gif.xcf
src-tauri/app-src/assets/styling/: block_model_styles.css  dropdowns.css  help_styles.css  helpstyles.css  recipe_styles.css  recipestyles.css  styles.css  test.css
src-tauri/app-src/functions/: advancements.js  block_models.js  blockstates.js  fixers.js  item_models.js  loot_tables.js  main_links.js  recipe_cutter.js  recipe_cutter_cplus.js  recipe_furnace.js  recipe_table.js  recipe_table_simple.js  save.js  savebutton.js  test.js  test.json  transition.js
src-tauri/app-src/maker_functions/: advancements.js  block_models.js  blockstates.js  fixers.js  item_models.js  loot_tables.js  main_links.js  recipe_cutter.js  recipe_furnace.js  recipe_table.js  recipe_table_simple.js  test.js
src-tauri/app-src/pages/: advancement.html  block_models.html  blockstates.html  help.html  item_models.html  loot_tables.html  recipe_cutter.html  recipe_cutter_cplus.html  recipe_furnace.html  recipe_table.html  recipe_table_simple.html  test.html
src-tauri/app-src/pages/functions/: save.js  transition.js
(+48 files in other folders)
